Issue #104: Changed the spacing and layout for the responses and alerts.

--- a/modules/modules.css
+++ b/modules/modules.css
@@ -70,12 +70,13 @@
 .page .textbox{ padding: 5px 16px 5px 5px; }
 .page .image{  }
 .page .image .caption{ font-size: 10px; }
-.page .input{ font-size: 11px; padding:0px; }
-.page .input .response { outline:1px solid #ccc; border:none; height:auto;}
-.page .input .response textarea{ height: 80px; border:none; outline:none; padding:5px 5px 20px 5px; margin-bottom:-17px; background:none; }
+.page .input{ font-size: 11px; padding: 0px; }
+.page .input .question { margin-bottom: 10px; }
+.page .input .response { height: auto; }
+.page .input .response textarea{ height: 80px; outline: 1px solid #ccc; padding: 5px 5px 20px 5px; margin-bottom: 2px; background: none; }
 .page .input .flags label{ display: inline-block; margin-left: 5px; font-size: 10px; }
-.page .input .flags input{ display: inline-block; margin: 5px 0px; }
-.page .input .alert{ font-size:10px; height:12px; margin:5px; padding:0px 0px 5px 18px; }
+.page .input .flags input{ display: inline-block; margin: 3px 0px; }
+.page .input .alert{ font-size: 10px; height: 12px; margin: 3px; padding: 0px 0px 5px 18px; }
 .page .input .alert.error{ background:url('images/001_30_12.png') no-repeat; }
 .page .input .alert.success{ background:url('images/001_06_12.png') no-repeat; }
 
